Changed deployed url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://osmantolo.github.io/portfolio-reactjs",
+  "homepage": "https://osmantolo.github.io/portfolio-reactjs/",
   "name": "portfolio-reactjs",
   "version": "0.1.0",
   "private": true,
