Add remote link

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,7 @@
     "description": "A command-line application that dynamically generates a professional README.md file based on user input.",
     "deployedLink": "https://osmantolo.github.io/readme_generator-node-js/",
     "repoLink": "https://github.com/OsmanTolo/readme_generator-node-js",
-    "screenshotPath": "../assets/images/custom-project.jpg"
+    "screenshotPath": "https://github.com/OsmanTolo/portfolio-reactjs/blob/main/src/assets/images/custom-project.jpg?raw=true"
   },
   {
     "id": 2,
